force-app/main/default/objects/Guarantor__c/fields/Credit_Application_Form__c.field-meta.xml
<CustomField>
    <fullName>Credit_Application_Form__c</fullName>
    <label>Credit Application Form</label>
    <referenceTo>Credit_Application_Form__c</referenceTo>
    <relationshipLabel>Guarantors</relationshipLabel>
    <relationshipName>Guarantors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>