force-app/main/default/objects/Guarantor__c/fields/Guarantor_Date__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>