force-app/main/default/objects/Guarantor__c/fields/Guarantor_Email__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>