force-app/main/default/objects/Guarantor__c/fields/Spouse_Date__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>