force-app/main/default/objects/Guarantor__c/fields/Spouse_Email__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>