force-app/main/default/objects/Guarantor__c/fields/Spouse_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Spouse_s_Name__c</fullName>
    <label>Spouse&apos;s Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>